<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_filter_room"
        android:title="Filter room"
        android:icon="@drawable/ic_filter"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_filter_hour"
        android:title="Filter hour"
        android:icon="@drawable/ic_filter_hour"
        app:showAsAction="always"/>
</menu>